@@ -1,3 +1,8 @@
+2015-03-10  Jakub Jelinek  <jakub@redhat.com>
+
+	PR rtl-optimization/65321
+	* gcc.dg/pr65321.c: New test.
+
 2015-03-10  Jan Hubicka  <hubicka@ucw.cz>
 
 	PR tree-optimization/65355
